--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 <body>
   <h1>Web Component Template</h1>
   <div class="grid">
-    <my-component name="Fred Waltz" dept="Sales"
+    <apex-flipcard name="Fred Waltz" dept="Sales"
       image="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80">
-    </my-component>
-    <my-component name="Andre Brühl" dept="Marketing"
+    </apex-flipcard>
+    <apex-flipcard name="Andre Brühl" dept="Marketing"
       image="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixqx=sCVMfBmCJh&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80">
-    </my-component>
-    <my-component name="Anna Kruger" dept="Designer"
+    </apex-flipcard>
+    <apex-flipcard name="Anna Kruger" dept="Designer"
       image="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixqx=sCVMfBmCJh&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80">
-    </my-component>
-    <my-component name="Sandra Beetz" dept="Project Lead"
+    </apex-flipcard>
+    <apex-flipcard name="Sandra Beetz" dept="Project Lead"
       image="https://images.unsplash.com/photo-1502685104226-ee32379fefbe?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80">
-    </my-component>
+    </apex-flipcard>
   </div>
 </body>
